	(twittering-manage-friendships): Likewise.
	(twittering-manage-favorites): Likewise.
	(twittering-update-lambda): Likewise.
	(twittering-update-jojo): Likewise.
	(twittering-http-post): Update a comment.

	* twittering-mode.el (twittering-http-get-default-sentinel): Add
	an additional information which is related to obsolete
	public_timeline.

2010-03-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-toggle-reverse-mode): invoke
	`twittering-render-timeline' correctly.

	* twittering-mode.el (twittering-make-display-spec-for-icon): add
	2 pixels margin to icons in order to make the cursor stand out.

2010-03-01  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-generate-formater): changed into
	a function.
	(twittering-generate-status-formater-base): likewise.
	(twittering-generate-format-status-function): likewise.

	* twittering-mode.el (twittering-find-curl-program): replace
	`find' with `memq' in order to execute this function without
	loading `cl-seq.el' .
	(twittering-start-http-session): likewise.
	(twittering-goto-next-thing): likewise.

2010-02-28  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-status-function-source):
	new variable for the status format used for generating
	`twittering-format-status-function'.
	(twittering-format-status-function): new variable for
	byte-compiled formating function.
	(twittering-parse-format-string): new function.
	(twittering-generate-formater): new macro for generating a lambda
	expression for given a format string and specifiers.
	(twittering-generate-status-formater-base): new macro for
	generating a lambda expression for given a format string.
	(twittering-generate-format-status-function): new macro for
	generating format status function.
	(twittering-update-status-format): new function for adjusting
	`twittering-format-status-function' with the current value of
	`twittering-status-format'.
	(twittering-mode-init-variables): invoke